Ensure project id is converted to string for making a filename

--- a/projects/1001.tex
+++ b/projects/1001.tex
@@ -4,7 +4,7 @@
 % which is freely distributed under the AGPLv3.
 % Copyright 2017, Gerard Keiser
 
-\title={singlexmlfile}
+\title{singlexmlfile}
 
 \startxmlsetups xml:BiographyofBob:*
   \xmlsetsetup{\xmldocument}{*}{-}
@@ -44,7 +44,7 @@
 
 \starttext
 
-  \xmlprocessfile{BiographyofBob}{biography_of_bob.xml}{}
+  \xmlprocessfile{BiographyofBob}{/home/keiser/boethius/books/biography_of_bob.xml}{}
   \setupheadnumber[BiographyofBobsection][0]
 
 \stoptext
